[package]
name = "base16-colorizer"
version = "0.1.0"
edition = "2021"
authors = ["bR3iN <bR3iN at posteo dot de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
serde = { version = "1.0.148", features = ["derive"] }
serde_yaml = "0.9.14"
toml = "0.5.9"
